--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,12 @@
         android:id="@+id/btn_validasi_psd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tab Button"/>
+        android:text="Validasi"/>
+
+    <Button
+        android:id="@+id/btn_github"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Github"/>
 
 </LinearLayout>
